welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:17: error: not found: value estSurbiscuit
		if (estSurbiscuit())
                    ^