welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {
var biscuit:Int = 0;
var caseOrange:Int = 0;

while((2 * biscuit) != (caseOrange + 1))
{
	avance();
	while(!estSurOrange && !estSurBiscuit)
	{
		avance();
	}

	if (estSurOrange())
	{
		caseOrange = caseOrange + 1;
		if (estSurbiscuit())
		{
			biscuit = biscuit + 1;
		}
	}
	else
	{
		biscuit = biscuit + 1;
	}
}
}

